# polish-pit-calculator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml
.github/workflows/: ci.yml
polish_pit_calculator/: __init__.py  app.py  caches.py  config.py  ib_flex_query.py  registry.py  schwab.py  ui.py  validators.py
polish_pit_calculator/tax_reporters/: __init__.py  api.py  base.py  coinbase.py  crypto.py  employment.py  file.py  ibkr.py  revolut.py  schwab.py  trade.py
skills/pit-tax-reporter/: SKILL.md
skills/pit-tax-reporter/agents/: openai.yaml
skills/pit-tax-reporter/references/: reporter-checklist.md
skills/skill-practicing/: SKILL.md
skills/skill-practicing/agents/: openai.yaml
skills/skill-practicing/references/: checklist.md
src/: __init__.py  app.py  caches.py  coinbase.py  config.py  ib.py  ib_flex_query.py  raw.py  revolut.py  schwab.py  utils.py
tests/: conftest.py  test_app.py  test_caches.py  test_coinbase.py  test_config.py  test_ib.py  test_ib_flex_query.py  test_raw.py  test_revolut.py  test_schwab.py  test_ui.py  test_utils.py
tests/tax_reporters/: test_api.py  test_base.py  test_coinbase.py  test_crypto.py  test_employment.py  test_file.py  test_ibkr.py  test_revolut.py  test_schwab.py  test_trade.py
