[project]
name = "polish-pit-calculator"
version = "1.0.0"
description = "Tool for generating content for Polish PIT forms."
authors = [
    { name = "Adam Rajfer", email = "adam.rajfer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3",
    "scipy>=1.10,<2",
    "streamlit>=1.28,<2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7,<4",
    "pytest>=8,<9",
]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.autoflake]
remove_all_unused_imports = true
in_place = true
remove_unused_variables = true
